--- a/about.html
+++ b/about.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Open Graph / LinkedIn -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://yourdomain.com/PATH">
+<meta property="og:title" content="PAGE_TITLE">
+<meta property="og:description" content="PAGE_DESCRIPTION">
+<meta property="og:image" content="https://yourdomain.com/assets/og-image.png">
+<meta property="og:site_name" content="Sourabh Tarodekar">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="PAGE_TITLE">
+<meta name="twitter:description" content="PAGE_DESCRIPTION">
+<meta name="twitter:image" content="https://yourdomain.com/assets/og-image.png">
     <link rel="icon" href="data:,">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
