--- a/capabilities.html
+++ b/capabilities.html
@@ -587,7 +587,7 @@
         <div class="eyebrow">Portfolio</div>
         <h1>Execution <strong>Capabilities</strong></h1>
         <p class="subtitle">How I drive complex hardware programs from development through scale</p>
-        <p class="intro">This portfolio is organized by execution capability rather than job title. Select the area most relevant to your role to view detailed examples, artifacts, and outcomes.</p>
+        <p class="intro">I’ve organized my work by what I can do for you, not just where I’ve been. Pick the capability that aligns with your current goals to see my process and impact in action.</p>
     </section>
 
     <main class="container">
